--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Inherent Notion, accelerating ideas.">
-    <meta name="author" content="Inherent Notion">
-    <title>Inherent Notion</title>
+    <meta name="description" content="Vivid Schooling, learn better!.">
+    <meta name="author" content="Vivid Schooling">
+    <title>Vivid Schooling</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Meyawo main styles -->
@@ -16,7 +16,7 @@
     <!-- Page Navbar -->
     <nav class="custom-navbar" data-spy="affix" data-offset-top="20">
         <div class="container">
-            <a class="logo" href="#">Inherent Notion</a>         
+            <a class="logo" href="#">Vivid Schooling</a>         
             <ul class="nav">
                 <li class="item">
                     <a class="link" href="#home">Home</a>
@@ -40,9 +40,9 @@
         <div class="header-content container">
             <h1 class="header-title">
                 <span class="up">HI!</span>
-                <span class="down">We are Inherent Notion</span>
+                <span class="down">Learn better with:</span>
             </h1>
-            <p class="header-subtitle">Accelerating ideas!</p>            
+            <p class="header-subtitle">Vivid Schooling</p>            
 
             
         </div>              
@@ -61,8 +61,8 @@
                     <p class="section-subtitle">Who Are we?</p>
                     <h2 class="section-title mb-3">About Us</h2>
                     <p>
-                        We are a company that helps other companies accelerate and, 
-                        <br> Our app helps people upskill to find relevant work.              
+                        We are a company that helps people learn better,
+                        <br> Our app helps people upskill and find relevant work.              
                     </p>
                 </div>              
             </div><!-- end of about wrapper -->
